refactor(tests): replace ApplicationTest with BaseUiTest for UI tests